--- a/projects/project 5 - Motivation Meme Project/6.4 Motivation Meme Project/index.html
+++ b/projects/project 5 - Motivation Meme Project/6.4 Motivation Meme Project/index.html
@@ -14,3 +14,17 @@ But it must have the following features:
 6. Read about the text-transform property on MDN docs to make the h1 uppercase with CSS.
   https://developer.mozilla.org/en-US/docs/Web/CSS/text-transform 
 -->
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <title>Motivation Meme</title>
+
+</head>
+
+<body>
+
+    <a img src="https://images.unsplash.com/photo-1588885249100-9a2271ba6f73?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=735&q=80" width=200 </a>
+</body>
