--- a/CSS/Section 7 Intermediate CSS/7.2+CSS+Positioning/7.2 CSS Positioning/index.html
+++ b/CSS/Section 7 Intermediate CSS/7.2+CSS+Positioning/7.2 CSS Positioning/index.html
@@ -5,6 +5,22 @@
   <title>CSS Positioning Exercise</title>
   <style>
     /* Write your code here */
+    .red-circle {
+      position: absolute;
+      top: 150px;
+      left: 250px;
+      width: 200px;
+      height: 200px;
+      background-color: red;
+      border-radius: 50%;
+    }
+    .blue-box {
+      width: 500px;
+      height: 300px;
+      background-color: blue;
+      margin: 200px;
+      position: relative;
+    }
   </style>
 </head>
 
