--- a/projects/project 6 - Flag Project/7.3 CSS Flag Project/index.html
+++ b/projects/project 6 - Flag Project/7.3 CSS Flag Project/index.html
@@ -6,7 +6,23 @@
   <title>CSS Flag Project</title>
   <style>
     /* Write your CSS Code here */
-    
+    .flag { 
+      width: 900px;
+      height: 600px;
+      background-color: rgb(206, 17, 38);
+    }
+    .flag > p {
+      text-align: center;
+      color: white;
+      font-size: 30px;
+      font-weight: bold;
+      ;
+    }
+    .flag > div { 
+      width: 100%;
+      height: 300px;
+      background-color: rgb(0, 40, 104)
+    }
   </style>
 </head>
 
