--- a/projects/project 6 - Flag Project/7.3 CSS Flag Project/index.html
+++ b/projects/project 6 - Flag Project/7.3 CSS Flag Project/index.html
@@ -2,28 +2,54 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <title>CSS Flag Project</title>
-  <style>
-    /* Write your CSS Code here */
-    .flag { 
-      width: 900px;
-      height: 600px;
-      background-color: rgb(206, 17, 38);
-    }
-    .flag > p {
-      text-align: center;
-      color: white;
-      font-size: 30px;
-      font-weight: bold;
-      ;
-    }
-    .flag > div { 
-      width: 100%;
-      height: 300px;
-      background-color: rgb(0, 40, 104)
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>CSS Flag Project</title>
+    <style>
+        .flag {
+            width: 900px;
+            height: 600px;
+            background-color: rgb(206, 17, 38);
+            position: relative;
+        }
+
+        .flag>p {
+            font-size: 5rem;
+            color: white;
+            text-align: center;
+        }
+
+        .flag>div {
+            width: 100%;
+            height: 300px;
+            background-color: rgb(0, 40, 104);
+            position: absolute;
+            top: 150px;
+
+        }
+
+        .flag>div>div {
+            background-color: white;
+            position: absolute;
+            height: 200px;
+            width: 200px;
+            border-radius: 50%;
+            top: 50px;
+            left: 350px;
+        }
+
+        p {
+            font-size: 5rem;
+            color: white;
+            text-align: center;
+            padding: 0;
+            margin: 0;
+        }
+
+        .flag>div div>p {
+            color: black;
+
+        }
+    </style>
 </head>
 
 <!-- 
@@ -37,14 +63,14 @@ https://appbrewery.github.io/flag-of-laos/
 -->
 
 <body>
-  <div class="flag">
-    <p>The Flag</p>
-    <div>
-      <div>
-        <p>of Laos</p>
-      </div>
+    <div class="flag">
+        <p>The Flag</p>
+        <div>
+            <div>
+                <p>of Laos</p>
+            </div>
+        </div>
     </div>
-  </div>
 </body>
 
 </html>
