--- a/CSS/Section 6 CSS Properties/6.1+Font+Properties/6.1 Font Properties/index.html
+++ b/CSS/Section 6 CSS Properties/6.1+Font+Properties/6.1 Font Properties/index.html
@@ -10,21 +10,43 @@
       color: white;
       font-size: 18px;
     }
-    
 
     /* Don't change the CSS above, add Your CSS below */
+    html {
+      font-size: 30px;
+    }
 
-    
+    #color {
+      color: coral;
+    }
+
+    #size {
+      font-size: 2rem;
+    }
+
+    #weight {
+      font-weight: 900;
+    }
+
+    #family {
+      font-family: 'Caveat', cursive;
+    }
+
+    #align {
+      text-align: right;
+    }
+
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
   </style>
 </head>
 
 <body>
   <h1>Important CSS Properties</h1>
-  <p>Color</p>
-  <p>Font Size</p>
-  <p>Font Weight</p>
-  <p>Font Family</p>
-  <p>Text Align</p>
+  <p id="color">Color</p>
+  <p id="size">Font Size</p>
+  <p id="weight">Font Weight</p>
+  <p id="family">Font Family</p>
+  <p id="align">Text Align</p>
 
   <!-- TODOs
   1. Change the color of <p>Color</p> to "coral" color.
@@ -34,6 +56,8 @@
   Link: https://fonts.google.com/specimen/Caveat
   5. Change the <p>Text Align</p> to right align.
   6. Change the the root (html element) font size to 30px -->
+
+
 </body>
 
 </html>
