--- a/projects/project 6 - Flag Project/7.3 CSS Flag Project/index.html
+++ b/projects/project 6 - Flag Project/7.3 CSS Flag Project/index.html
@@ -5,28 +5,32 @@
     <meta charset="UTF-8">
     <title>CSS Flag Project</title>
     <style>
+        /* The "flag" class styles the entire flag. It is 900px wide by 600px tall with a red background. */
         .flag {
             width: 900px;
             height: 600px;
             background-color: rgb(206, 17, 38);
+            /* Position relative allows the child elements to be positioned relative to this container */
             position: relative;
         }
 
+        /* The paragraph within the flag is styled with a large font size, white text color, and centered text alignment. */
         .flag>p {
             font-size: 5rem;
             color: white;
             text-align: center;
         }
 
+        /* The direct div child of the flag is styled to be as wide as the flag, half as tall, and with a dark blue background. It is positioned absolutely at 150px from the top to create the middle stripe of the flag. */
         .flag>div {
             width: 100%;
             height: 300px;
             background-color: rgb(0, 40, 104);
             position: absolute;
             top: 150px;
-
         }
 
+        /* This styles the white circle in the center of the flag. It is 200px by 200px with a white background and a rounded border to create the circular shape. It is positioned absolutely within the blue stripe. */
         .flag>div>div {
             background-color: white;
             position: absolute;
@@ -37,6 +41,7 @@
             left: 350px;
         }
 
+        /* This applies the same styling as the flag's paragraph to all paragraphs in the document, with a large font size, white text color, centered text alignment, and no padding or margin. */
         p {
             font-size: 5rem;
             color: white;
@@ -45,9 +50,9 @@
             margin: 0;
         }
 
+        /* This changes the color of the paragraph within the white circle to black. */
         .flag>div div>p {
             color: black;
-
         }
     </style>
 </head>
@@ -63,6 +68,7 @@ https://appbrewery.github.io/flag-of-laos/
 -->
 
 <body>
+    <!-- This is the main flag container. It contains a paragraph and a div for the blue stripe, which in turn contains a div for the white circle. -->
     <div class="flag">
         <p>The Flag</p>
         <div>
