--- a/CSS/Section 9 Flexbox/9.0+Display+Flex/9.0 Display Flex/index.html
+++ b/CSS/Section 9 Flexbox/9.0+Display+Flex/9.0 Display Flex/index.html
@@ -19,8 +19,9 @@
     .container {
       padding: 10px;
       background-color: gold;
+      display: flex;
+      gap: 0.5rem;
     }
-
   </style>
 </head>
 
