--- a/projects/project 9 - Mondrian Project/10.3 Mondrian Project/index.html
+++ b/projects/project 9 - Mondrian Project/10.3 Mondrian Project/index.html
@@ -4,26 +4,149 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mondrian Project</title>
+  <title>Mondrian Inspired Design</title>
   <style>
     /* 
-    Write your CSS here 
-    Gap Colour: #000
-    White: #F0F1EC
-    Red: #E72F24
-    Black: #232629
-    Blue: #004592
-    Yellow: #F9D01E
+        Key Colors:
+        Gap Colour: #000
+        White: #F0F1EC
+        Red: #E72F24
+        Black: #232629
+        Blue: #004592
+        Yellow: #F9D01E
+        */
 
-    For dimensions, see dimensions.png image.
-    HINT: Remember you can't change the properties of grid lines.
-    But grid lines are transparent!
-    */
+    /* Centering the grid on the entire viewport for a nice look */
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      /* Using viewport height ensures centering regardless of screen size */
+      margin: 0;
+      padding: 0;
+    }
+
+    /* 
+        Main grid container settings.
+        Using a 5x5 grid for simplicity.
+        */
+    .container {
+      height: 748px;
+      width: 748px;
+      display: grid;
+      background-color: #000;
+      /* This color will appear as the gap between grid items. */
+      grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+      /* Defines 5 columns each taking up an equal fraction of the container. Alternative: 'repeat(5, 1fr)' */
+      grid-template-rows: repeat(5, 1fr);
+      /* Same but an alternate way. This will be for the rows. */
+      gap: 9px;
+      /* Width of the 'lines' between the blocks */
+    }
+
+    /* Default grid item styling (mainly white blocks) */
+    .item {
+      background-color: #F0F1EC;
+    }
+
+    /* Specific colored blocks */
+    .red {
+      background-color: #E72F24;
+      grid-column: 1/3;
+      /* Spans from the start of column 1 to the start of column 3 */
+      grid-row: 1/4;
+      /* Spans from the start of row 1 to the start of row 4 */
+      /* Note: In grid, counting starts from 1. So, '1/3' means it will occupy 1 and 2. '1/4' means it will occupy 1, 2, and 3. */
+    }
+
+    .blue {
+      background-color: #004592;
+      grid-column: 5;
+      /* Only occupies the 5th column */
+      grid-row: 3/6;
+      /* Spans from the start of row 3 to beyond the last row, effectively covering rows 3, 4, and 5. */
+    }
+
+    .yellow {
+      background-color: #F9D01E;
+      grid-column: 3/5;
+      /* Occupies columns 3 and 4 */
+      grid-row: 5;
+      /* Only occupies the 5th row */
+    }
+
+    .black {
+      background-color: #232629;
+      grid-column: 4/5;
+      /* Occupies columns 4 and 5 */
+      grid-row: 4;
+      /* Only occupies the 4th row */
+    }
+
+    /* 
+Double-sized white block.
+This block takes up columns 4 and 5 of the 1st row in the main container.
+*/
+    .white-double {
+      background-color: #F0F1EC;
+      grid-column: 4/6;
+      /* Span across columns 4 and 5 of the main grid */
+      grid-row: 1/2;
+      /* Only occupies the 1st row */
+    }
+
+
+    /* 
+        Additional Tips:
+        - Always review the widths and heights to ensure the grid layout matches the intended design.
+        - Use the 'gap' property to adjust the perceived thickness of grid lines.
+        - Add hover effects for more interactive designs.
+        - For responsive designs, think about how this grid should adapt on smaller screens.
+        - To debug alignment issues, add temporary borders to grid items.
+        */
   </style>
 </head>
 
 <body>
-  <!-- Write your HTML here -->
+  <!-- Grid layout -->
+  <!-- The order in which items are placed in the container dictates their position unless specifically set with grid-column or grid-row properties. -->
+
+  <div class="container">
+
+    <!-- Row 1 -->
+    <div class="item red"></div> <!-- Large red block: columns 1-2, rows 1-3 -->
+    <div class="item"></div> <!-- White block: column 3, row 1 -->
+    <div class="item white-double"></div> <!-- Double-sized white block: columns 4-5, row 1 -->
+
+
+    <!-- Row 2 -->
+    <div class="item"></div> <!-- Occupied by red block -->
+    <div class="item"></div> <!-- White block: column 3, row 2 -->
+    <div class="item"></div> <!-- White block: column 4, row 2 -->
+    <div class="item"></div> <!-- Occupied by red block -->
+    <div class="item blue"></div> <!-- Large blue block: column 5, rows 3-5 -->
+
+    <!-- Row 3 -->
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item black"></div> <!-- Black block: columns 4-5, row 4 -->
+    <div class="item"></div>
+
+    <!-- Row 4 -->
+    <div class="item"></div> <!-- White block: column 1, row 4 -->
+    <div class="item"></div> <!-- White block: column 2, row 4 -->
+    <div class="item black"></div>
+    <div class="item"></div>
+
+    <!-- Row 5 -->
+    <div class="item"></div> <!-- White block: column 1, row 5 -->
+    <div class="item"></div> <!-- White block: column 2, row 5 -->
+    <div class="item yellow"></div> <!-- Yellow block: columns 3-4, row 5 -->
+
+  </div>
+
 </body>
 
 </html>
