added padding bottom to google play button

--- a/projects/project 10 - TinDog Project/11.3 TinDog Project/index.html
+++ b/projects/project 10 - TinDog Project/11.3 TinDog Project/index.html
@@ -32,7 +32,7 @@
         </div>
 
         <!-- Column: Occupies half the space (6/12 columns) on LG screens and up. -->
-        <div class="col-lg-6">
+        <div class="col-lg-6 pb-3">
 
           <!-- Heading: 'display-5' is a large heading size. 'fw-bold' makes the text bold. 'text-body-emphasis' likely emphasizes text color (custom class). 'lh-1' sets line height. 'mb-3' is a margin-bottom. -->
           <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Meet new and interesting dogs nearby.</h1>
