--- a/DOM/index.html
+++ b/DOM/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
   <meta charset="UTF-8">
   <title>Basic HTML Page</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Hello, World!</h1>
-  <p>This is a paragraph.</p>
-  <ul>
-    <li>Item One</li>
-    <li>Item Two</li>
-  </ul>
-  <a href="https://www.example.com">Visit Example.com</a>
+  <h1>Hello!</h1>
 </body>
+
+<script type="text/javascript">
+  alert("Hello");
+
+</script>
 </html>
