--- a/DOM/index.html
+++ b/DOM/index.html
@@ -9,8 +9,7 @@
   <h1>Hello!</h1>
 </body>
 
-<script type="text/javascript">
-  alert("Hello");
+<script src="index.js" charset="UTF-8">  </script>
 
 </script>
 </html>
